--- a/css/main.scss
+++ b/css/main.scss
@@ -238,6 +238,7 @@ main {
   background: rgba(51, 51, 51, 0.267);
   padding: 20px 300px;
   border: #9f8457 solid 2px;
+  margin-left: 20px;
 }
 .contact_section h2 {
   margin-bottom: 30px;
