--- a/css/main.css
+++ b/css/main.css
@@ -462,7 +462,7 @@ main#home h1 {
   background: rgba(51, 51, 51, 0.267);
   padding: 20px 300px;
   border: #9f8457 solid 2px;
-  margin-left: 20px;
+  margin-left: 10%;
 }
 
 .contact_section h2 {
